Se agregó la paginación

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bsale Test</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Bsale Shop</title>
+    <link rel="stylesheet" href="./index.css" />
     <script
       src="https://kit.fontawesome.com/e7f8ae5afa.js"
       crossorigin="anonymous"
@@ -13,45 +13,25 @@
   </head>
   <body>
     <header class="header">
-      <h2 class="header__logo">Bsale Test</h2>
-
-      <div class="header__categories">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="16"
-          height="16"
-          fill="currentColor"
-          class="bi bi-list"
-          viewBox="0 0 16 16"
-          onclick="showSidebar(event)"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
-          />
-        </svg>
+      <div class="header__categories" id="category-button">
+        <i class="fa-solid fa-bars"></i>
         <span>Categorías</span>
       </div>
+      <h2 class="header__logo" id="logo">Bsale Test</h2>
       <form class="search">
         <input
           type="text"
           class="search__input"
+          autocomplete="off"
           placeholder="Buscar producto"
           id="name-input"
         />
-        <button class="search__button" onclick="searchProduct(event)">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-search search__icon"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
-            />
-          </svg>
+        <button
+          class="search__button"
+          id="search-icon"
+          onclick="searchProduct(event)"
+        >
+          <i class="fa-solid fa-magnifying-glass search__icon"></i>
         </button>
       </form>
       <nav class="header__nav">
@@ -62,11 +42,7 @@
           <ul class="shopping-cart__list" id="cart-list">
             <template id="template-cart">
               <li class="cart-product" id="cart-item">
-                <img
-                  class="cart-product__image"
-                  src="https://dojiw2m9tvv09.cloudfront.net/11132/product/alto8532.jpg"
-                  alt=""
-                />
+                <img class="cart-product__image" src="" alt="" />
                 <div class="cart-product__info">
                   <h3 class="cart-product__name">Pisco Alto Del Carmen 35º</h3>
                   <p class="cart-product__price">S/ 98</p>
@@ -88,25 +64,6 @@
     </header>
     <main>
       <div class="sidebar" id="sidebar">
-        <div class="sidebar__header">
-          <h3 class="sidebar__title">Categorías</h3>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-x-circle"
-            onclick="hideSidebar(event)"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
-            />
-            <path
-              d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
-            />
-          </svg>
-        </div>
         <ul class="sidebar__list" id="categories"></ul>
       </div>
       <h1 class="title" id="title">Productos</h1>
@@ -125,7 +82,6 @@
           </div>
         </div>
       </div>
-
       <div class="products-container" id="products">
         <template id="template-card">
           <div class="card">
@@ -135,22 +91,14 @@
             <h2 class="card__title"></h2>
             <div class="card__footer">
               <span class="card__price"></span>
-              <i class="fa-solid fa-cart-plus cart-icon"></i>
-            </div></div
-        ></template>
-        <template id="template-discount">
-          <div class="card">
-            <div class="card__image">
-              <img src="" alt="" />
-            </div>
-            <h2 class="card__title"></h2>
-            <div class="card__footer">
-              <span class="card__price"> </span>
-              <span class="card__old-price">xddxdx</span>
+              <span class="card__old-price"></span>
               <i class="fa-solid fa-cart-plus cart-icon"></i>
             </div></div
         ></template>
       </div>
+      <nav class="pagination">
+        <ul class="pagination__list" id="pagination-list"></ul>
+      </nav>
     </main>
     <footer></footer>
     <script src="./index.js"></script>
