--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
             <div class="card__footer">
               <span class="card__price"></span>
               <span class="card__old-price"></span>
+              <div class="card__counter" id="card-counter">
+                <span class="card__cant">1</span>
+                <button class="card__controller plus">
+                  <i class="fa-solid fa-plus"></i>
+                </button>
+                <button class="card__controller minus">
+                  <i class="fa-solid fa-minus"></i>
+                </button>
+              </div>
               <i class="fa-solid fa-cart-plus cart-icon"></i>
             </div></div
         ></template>
