--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bsale Shop</title>
+    <title>Bsale Shop Prueba</title>
     <link rel="stylesheet" href="./index.css" />
     <script
       src="https://kit.fontawesome.com/e7f8ae5afa.js"
